samples/_failures_safe/1761704549_f4f1cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49fef39f.c: In function ‘main’:
./samples/SAFE/__tmp_49fef39f.c:163:17: error: expected declaration or statement at end of input
  163 |                 if (multiply_matrices(&mat1, &mat2, &result)) {
      |                 ^~
./samples/SAFE/__tmp_49fef39f.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49fef39f.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49fef39f.c:163:17: error: expected declaration or statement at end of input
